fix(api): :art: improve API return codes